--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,6 +1,27 @@
 %ABSTRACT
 \begin{abstract}
-% The abstract will go here....
+
+% TODO...
+
+\vspace*{1ex}
+
+\begin{center}
+
+\begin{minipage}{11.5cm}
+\noindent
+Robot calibration is an important problem to be solved in any robot. Once the robot is calibrated, it can effectively interact with the environment. This work is focused in calibration of multiple cameras mounted in a robot. Combining measurements from different cameras, an optimization process is defined. Then, a solution is obtained by minimizing the reprojection error with a non-linear solver, that is, a bundle adjustment approach. As additional constraints, it is assumed that one camera is already calibrated with respect to the robot, and an initial calibration from the robot model is provided.
+
+%
+%
+
+\end{minipage}
+
+\end{center}
+
+
+
+
+
 
 \vspace*{5cm}
 
@@ -9,12 +30,14 @@
 
 
 % \begin{center}
+% \begin{minipage}{11.5cm}
 % \begin{quote}
-% \it Research is what I'm doing when I don't know what I'm
-% doing.\,\ldots
+% \it La \'unica lucha que se pierde es la que se abandona\,\ldots \\
+% (The only fight we lose is the one we abandon)
 % \end{quote}
+% \hfill{\small Ernesto Che Guevara}
+% \end{minipage}
 % \end{center}
-% \hfill{\small Werner von Braun}
 
 
 
