--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -5,18 +5,18 @@ This project combines the strongest of several \textbf{open-source} components: 
 
 \begin{figure}[!htbp]
  \centering
- \includegraphics[width=0.6\textwidth]{images/PR2_free_robot.jpg}
+ \includegraphics[width=0.65\textwidth]{images/PR2_free_robot.jpg}
  \caption{PR2 pleased to be free.}
  \label{fig:PR2_free_robot}
 \end{figure}
 
 The above mentioned software components are well designed, with excellent interfaces and documentation. Even though this fact, \textbf{combining} them in an unique product is a \textbf{time consuming} task, which requires different type of abilities; for example, solve compilation problems with CMake or Catkin (new compilation system in ROS), to mention one.
 
-Regarding the thesis itself, two different methods have been proposed for the \textbf{structure initialization} (3D points). Initialization used for the bundle adjustment optimizer (Ceres Solver). These methods are: solvePnP --3D points in the camera reference-- and the n-view triangulation method.
+Regarding the thesis itself, \textbf{robot calibration} is an important problem to be solved in any robot, in order to allow an effective interaction with the environment. And this thesis has been focused in \textbf{multiple camera calibration}. The work has been done by experimenting with real data, real robots, real problems.
 
-The improvement in calibration has been shown \textbf{visually} --for a human-friendly comparison-- and \textbf{quantitatively} --for a more rigorous analysis--. A bias has been observed in the solvePnP solution, which will lead in further investigations using the second method (n-view triangulation), with the intention of improving even more the results.
+Two different methods have been proposed for the \textbf{structure initialization} (3D points). Initialization used for the bundle adjustment optimizer (Ceres Solver). These methods are: solvePnP --3D points in the camera reference-- and the n-view triangulation method.
 
-\textbf{Robot calibration} is an important problem to be solved in any robot, in order to allow an effective interaction with the environment. This thesis has been focused in \textbf{multiple camera calibration}. The work has been done experimenting with real data, real robot, real problems.
+The improvement in calibration has been shown \textbf{visually} --for a human-friendly comparison-- and \textbf{quantitatively} --for a more rigorous analysis--. A bias has been observed in the solvePnP solution, which will lead to further investigations using the triangulation method, with the intention of improve the results even more.
 
 
-To conclude this thesis, it has been a total \textbf{proud} to work with two excellent person like David Fofi and Vincent Rabaud, and in two excellent places like Le2i and Willow Garage.
+To conclude with this thesis, it has been a \textbf{proud} to work with two excellent person like David Fofi and Vincent Rabaud, in two excellent places like Le2i and Willow Garage.
