--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -197,7 +197,7 @@ void nViewTriangulate(const Mat_<double> &x,
 \textbf{Problem}: multi-view triangulation method is not as precise as expected, see Figure \ref{fig:triangulation_fails}.
 
 \noindent
-\textbf{Solution}: more analysis is required to find why the re-projection error is large.
+\textbf{Solution}: more analysis is required to find why the reprojection error is large.
 
 \begin{figure}[!htbp]
  \centering
