--- a/tex/technical_background.tex
+++ b/tex/technical_background.tex
@@ -46,7 +46,7 @@ Bundle adjustment algorithms take the following three data as inputs (see Figure
 \end{figure}
 
 \noindent
-Bundle adjustment optimizes both the scene $X_i$ and camera parameters $P_j$ by minimizing the sum of squared re-projection errors:
+Bundle adjustment optimizes both the scene $X_i$ and camera parameters $P_j$ by minimizing the sum of squared reprojection errors:
 \begin{equation}
  \sum _{i=1}^{n}\sum _{j\in V_{i}} ||x_{ij}-P_{i}X_{j}||^2
 \end{equation}
