--- a/thesis.tex
+++ b/thesis.tex
@@ -230,6 +230,7 @@
 \input{tex/multiview.tex}
 
 \input{tex/implementation.tex}
+% \input{tex/additional.tex}
 \input{tex/future_work.tex}
 
 \input{tex/conclusion.tex}
