--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -1,5 +1,9 @@
 \chapter{Theorem demonstrations}
-TODO... the theorem demonstration here...
+\label{ap:proof}
 
+
+\begin{theorem}
+\label{th:singular_values}
+\end{theorem}
 
 
