--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -16,7 +16,9 @@ Regarding the thesis itself, \textbf{robot calibration} is an important problem 
 
 Two different methods have been proposed for the \textbf{structure initialization} (3D points). Initialization used for the bundle adjustment optimizer (Ceres Solver). These methods are: solvePnP --3D points in the camera reference-- and the n-view triangulation method.
 
-The improvement in calibration has been shown \textbf{visually} --for a human-friendly comparison-- and \textbf{quantitatively} --for a more rigorous analysis--. A bias has been observed in the solvePnP solution, which will lead to further investigations using the triangulation method, with the intention of improve the results even more.
+The improvement in calibration has been shown \textbf{visually} --for a human-friendly comparison-- and \textbf{quantitatively} --for a more rigorous analysis--. A bias has been observed in the solvePnP solution, which will lead to future research with the aim to improve results using the n-view triangulation method. %, with the intention of improve the results even more.
+
+In addition to the practical experimentation, a theoretical development has been also elaborated in the framework of epipolar geometry, in which a method for motion initialization is discussed.
 
 
 To conclude with this thesis, it has been a \textbf{proud} to work with two excellent person like David Fofi and Vincent Rabaud, in two excellent places like Le2i and Willow Garage.
