--- a/refs.bib
+++ b/refs.bib
@@ -128,3 +128,11 @@ pages={1-8},
 keywords={calibration;cameras;image resolution;stereo image processing;camera calibration;camera parameter estimates;geometric fidelity;high-resolution digital cameras;image-based modeling;multiview stereo-bundle adjustment;standard bundle adjustment algorithm;Calibration;Computer science;Digital cameras;Layout;Lenses;Nonlinear distortion;Parameter estimation;Robustness;Solid modeling;Testing},
 doi={10.1109/CVPR.2008.4587681},
 ISSN={1063-6919},}
+
+
+@book{Strang:1993,
+  author = {Gilbert Strang},
+  title = {Introduction to Linear Algebra},
+  publisher = {Wellesley-Cambridge Press},
+  year = {1993},
+}
