--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -29,15 +29,15 @@ Robot calibration is an important problem to be solved in any robot. Once the ro
 
 
 
-% \begin{center}
-% \begin{minipage}{11.5cm}
-% \begin{quote}
-% \it La \'unica lucha que se pierde es la que se abandona\,\ldots \\
-% (The only fight we lose is the one we abandon)
-% \end{quote}
-% \hfill{\small Ernesto Che Guevara}
-% \end{minipage}
-% \end{center}
+\begin{center}
+\begin{minipage}{11.5cm}
+\begin{quote}
+\it La \'unica lucha que se pierde es la que se abandona\,\ldots \\
+(The only fight we lose is the one we abandon)
+\end{quote}
+\hfill{\small Ernesto Che Guevara}
+\end{minipage}
+\end{center}
 
 
 
