--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -14,9 +14,9 @@ The above mentioned software components are well designed, with excellent interf
 
 Regarding the thesis itself, \textbf{robot calibration} is an important problem to be solved in any robot, in order to allow an effective interaction with the environment. And this thesis has been focused in \textbf{multiple camera calibration}. The work has been done by experimenting with real data, real robots, real problems.
 
-Two different methods have been proposed for the \textbf{structure initialization} (3D points). Initialization used for the bundle adjustment optimizer (Ceres Solver). These methods are: solvePnP --3D points in the camera reference-- and the n-view triangulation method.
+Two different methods have been proposed for the \textbf{structure initialization} (3D points). Initialization used for the bundle adjustment optimizer (Ceres Solver). These methods are: solvePnP --3D points in the camera reference-- and n-view triangulation method.
 
-The improvement in calibration has been shown \textbf{visually} --for a human-friendly comparison-- and \textbf{quantitatively} --for a more rigorous analysis--. A bias has been observed in the solvePnP solution, which will lead to future research with the aim to improve results using the n-view triangulation method. %, with the intention of improve the results even more.
+The improvement in calibration has been shown \textbf{visually} --for a human-friendly comparison-- and \textbf{quantitatively} --for a more rigorous analysis--. A bias has been observed in the solvePnP solution, which will lead to future research with the aim to improve results using n-view triangulation method. %, with the intention of improve the results even more.
 
 In addition to the practical experimentation, a theoretical development has been also elaborated in the framework of epipolar geometry, in which a method for motion initialization is discussed.
 
