--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -6,12 +6,13 @@ Since the ROS package describes in this thesis is still in development stage man
 \begin{itemize}
  \item The highest priority is to fix triangulation in order to get a better structure initialization, this will lead to a considerable improvement in the whole calibration system.
 
-%  \item Use another initialization for the $[R_i t_i]$... TODO...
 
  \item User interface is required to make the package more useful.
 
  \item The system should be robot agnostic. There is a wizard in the new Moveit! package that can be used it to create the configuration files.
 
  \item Export the URDF to a file. I had to fixed some bugs in the URDF Dom package, they will allow to create this functionality.
+
+ \item Validate the proposed method in chapter \ref{cha:additional} for motion initialization.
 
 \end{itemize}
