--- a/tex/additional.tex
+++ b/tex/additional.tex
@@ -1,7 +1,7 @@
 \chapter{Additional work}
 \label{cha:additional}
 
-Two methods for structure initialization has been proposed (chapter \ref{cha:multi-view calibration}). However, a prior initialization for motion --rotation and translation-- is required. This chapter deals with a motion initialization, based on measurements and on the beforehand initialization.
+Two methods for structure initialization has been proposed (in chapter \ref{cha:multi-view calibration}). However, a prior initialization for motion --rotation and translation-- is required. This chapter deals with a motion initialization, based on measurements and on the beforehand initialization.
 
 This chapter is purely theoretical and experiments must be performed in order to get validation. Nevertheless, it is worth further research. Knowledge of \textit{linear algebra} and \textit{epipolar geometric} will be assumed. %On a first reading of this work, this chapter can be skipped.
 
@@ -12,7 +12,7 @@ This chapter is purely theoretical and experiments must be performed in order to
 Some preliminary concepts  of epipolar geometric are introduced as a reminder: essential matrix and camera resection.
 
 \subsection{Essential matrix}
-Now, consider a pair of camera matrices $P = [I | 0]$ and $P' = [R | t]$. The essential matrix has the form (see \cite[p257]{HZ2}):
+Now, consider a pair of camera matrices $P = [I~0]$ and $P' = [R~t]$. The essential matrix has the form (see \cite[p257]{HZ2}):
 \begin{equation}
 E = [t]_{\times}R
 \end{equation}
@@ -48,7 +48,7 @@ cannot be determined. Figure \ref{fig:resection} shows that a reconstructed poin
 
 In this section, a proposed method is explained. This method is a generalization of camera resection (see section \ref{sec:resection}, or \cite[Result 9.19]{HZ2}). In \cite[p258, section 9.6.2]{HZ2} is stated that the overall scale cannot be determined,
 % with resection the scale\footnote{Actually, the scale of the recovered translation} is unknown,
-but it has been derived here that the scale is the norm of the original translation vector $\mathbf{t}$  (see theorem \ref{th:norm}). However, the norm of translation vector~$\mathbf{t}$ is usually unknown (recall that we want to recover the motion --$\mathbf{R}$ and $\mathbf{t}$-- from $\mathbf{E}$), but for theoretical purposes let's suppose for a moment it is known. \textbf{Note}: part of the following theorem proof is postponed until Appendix~\ref{ap:proof}.
+but it has been derived here that the scale is the norm of the original translation vector $\mathbf{t}$  (see theorem \ref{th:norm}). However, the norm of translation vector~$\mathbf{t}$ is usually unknown (recall that we want to recover the motion, $\mathbf{R}$ and $\mathbf{t}$, from $\mathbf{E}$), but for theoretical purposes let's suppose for a moment it is known. \textbf{Note}: part of the following theorem proof is postponed until Appendix~\ref{ap:proof}.
 
 % , it is possible to choose this scale in a more convenient way as explained in the following.
 
@@ -78,7 +78,7 @@ Suppose a given essential matrix $E=[\mathbf{t}]_{\times}R$, and the norm of $\m
 
 \begin{proof}
 \begin{align}
-(\mbox{from theorem~} \ref{th:singular_values}, Appendix ~\ref{ap:proof})  & \quad\Rightarrow\quad E = U diag(k,k,0) V^T            \quad\quad\mbox{a SVD decomposition} \nonumber \\[3ex]
+(\mbox{from lemma~} \ref{lemma:singular_values}, Appendix ~\ref{ap:proof})  & \quad\Rightarrow\quad E = U diag(k,k,0) V^T            \quad\quad\mbox{a SVD decomposition} \nonumber \\[3ex]
  t\,[t]_{\times} = 0 & \quad\Rightarrow\quad  t\,S = 0 \nonumber \\
                      & \quad\Rightarrow\quad  t \mbox{~is left null-space of~} S \nonumber \\
                      & \quad\Rightarrow\quad  t \mbox{~is left null-space of~} E, \quad \mbox{since~} E=SR \nonumber \\
@@ -115,8 +115,8 @@ then
 The actual generalization is presented in the following theorem:
 \begin{theorem}
 \label{th:generalization}
-For a given essential matrix $E = U diag(k,k,0) V^T$, where $||t||=k$, and first camera matrix
-$P = [I | 0]$, there are four possible choices for the second camera matrix $P'$, namely
+For a given essential matrix $E = U\,diag(k,k,0)\,V^T$, where $||t||=k$, and first camera matrix
+$P = [I~0]$, there are four possible choices for the second camera matrix $P'$, namely
 \begin{align*}
 P' & = [~~UWV^T ~ ~| +k\,u3] \mbox{~or~} \\
    & = [~~UWV^T ~ ~| -k\,u3] \mbox{~or~} \\
@@ -176,7 +176,9 @@ From the assumption number \textbf{3.} (small perturbations),
 \end{equation}
 
 \noindent
-Now, suppose that resection has been applied to the essential matrix $E$ obtained from the measurements between $[I~0]$ (left camera) and $[R_1~t_1]$. Then, from the correct solution, it is possible to obtain
+Now, suppose that resection has been applied to the essential matrix $E$ obtained from the measurements between $[I~0]$ (left camera) and $[R_1~t_1]$. Then,
+% from the correct solution,
+it is possible to obtain
 \begin{equation}
  E \rightarrow R^*, t^*
 \end{equation}
@@ -184,7 +186,7 @@ Now, suppose that resection has been applied to the essential matrix $E$ obtaine
 \noindent
 For the exposed in \cite{HZ2} and % It has been shown that,
 % Using
-theorem \ref{th:generalization},
+theorem \ref{th:generalization}, we can recover the motion
 \begin{equation}
 \left\{
   \begin{align}
@@ -195,7 +197,7 @@ theorem \ref{th:generalization},
 \end{equation}
 
 \noindent
-Then, using equation (\ref{eq:aprox}),
+But $||t_1||$ is unknown; then, using the approximation (\ref{eq:aprox}),
 \begin{equation}
 \label{eq:proposed_method}
 \left\{
@@ -207,20 +209,20 @@ Then, using equation (\ref{eq:aprox}),
 \end{equation}
 
 \noindent
-And finally, the \textbf{proposed method} can be found in the last equation (\ref{eq:proposed_method}). In words can be summarized as: \textbf{1.} find essential matrix using the measurements; \textbf{2.} apply camera resection to recover motion, but with unknown scale factor in the translation; \textbf{3.} use the previous translation norm (our prior knowledge) to approximate the scale factor using theorem \ref{th:generalization}.
+And finally, the \textbf{proposed method} can be found in the last equation (\ref{eq:proposed_method}). In word, can be summarized as: \textbf{1.} find essential matrix using the measurements; \textbf{2.} apply camera resection to recover motion, but with unknown scale factor in the translation; \textbf{3.} use the previous translation norm (our prior knowledge) to approximate the scale factor using theorem \ref{th:generalization} and the assumption of small perturbations.
 
 \subsection{Advantages / disadvantages}
 \subsubsection{Advantages}
 \begin{itemize*}
- \item Rotation matrix is can be calculated without ambiguities.
+ \item Rotation matrix is can be calculated any ambiguity.
  \item Robust estimation for essential matrix exist; therefore, it can be robust to outliers.
 \end{itemize*}
 
 \subsubsection{Disadvantages}
 \begin{itemize*}
- \item It is needed to calculated the essential matrix and then camera resection. It is more expensive computationally, in contrast with the use of the prior knowledge directly (i.e., previous motion: $[R_0~t_0]$).
+ \item It is needed to calculated the essential matrix and camera resection. It is more expensive computationally, in contrast with the use of the prior knowledge directly (i.e., previous motion: $[R_0~t_0]$).
 
- \item It has not been yet validate, see open questions below.
+ \item It has not been yet validate, see ``open questions'' below.
 \end{itemize*}
 
 
@@ -228,7 +230,9 @@ And finally, the \textbf{proposed method} can be found in the last equation (\re
 \subsection{Open questions}
 
 % Since experimentation have been centered in multi camera calibration, open questions are
-As mentioned before, all the experimentation have been focused in multi camera calibration, and no time for this has been left. Therefore, there are still open questions, e.g.: 1. will it be possible to recover the scale factor of $||t1||$ with this method? 2. In that case, will it be better this initialization that the one already provided (i.e., previous motion)? Further research and experimentation is needed to validate the proposed method.
+As mentioned before, all the experimentation have been focused in multi camera calibration.
+% , and no time for this has been left.
+Therefore, there are still open questions, e.g.: 1. will it be possible to recover the scale factor of $||t_1||$ with this method? 2. In that case, will it be better this initialization that the one already provided (i.e., previous motion)? Further research and experiments are needed to validate the proposed method.
 
 
 
