--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -13,7 +13,7 @@ Examples where calibration is necessary are:
 \end{itemize*}
 
 \noindent
-In this thesis calibration of multiple cameras will be studied. The term \textit{recalibration} refers to the existence of an initial calibration, provided by the robot model description (the URDF). Another important assumption is that one camera is already calibrated with respect to the robot. This camera will be the \textit{reference camera}.
+In this thesis calibration of multiple cameras will be studied. The term \textit{recalibration} refers to the existence of an initial calibration, provided by the robot model description. Another important assumption is that one camera is already calibrated with respect to the robot. This camera will be the \textit{reference camera}.
 
 
 \vspace*{-2ex}
